flux/apps/slides-demo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: slides-demo
  namespace: mimsy
  labels:
    app: slides-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: slides-demo
  template:
    metadata:
      namespace: mimsy
      labels:
        app: slides-demo
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: slides-demo
          image: ghcr.io/mimsy-cms/slides-demo:20250903-084247-04af505 # {"$imagepolicy": "mimsy:slides-demo"}
          ports:
            - name: http
              containerPort: 3000
          resources:
            requests:
              cpu: 250m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
  strategy:
    type: RollingUpdate
